tests/script_runtime_errors/function_error_n/error.txt
Error: 
    2 | string::format(a, "snot", "badger", "cake")
      | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Runtime error in function string::format/4: expected 1st parameter to format to be a format specifier e.g. to  print a number use `string::format("{{}}", 1)`